# flask2fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  bash_project_generator.sh  book_project_generator.py  setup_fastapi.sh
book/async-book/: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
book/async-book/chapters/01_executive_summary_and_business_case/: README.md
book/async-book/chapters/02_technical_architecture_and_design/: README.md
book/async-book/chapters/03_database_layer_migration/: README.md
book/async-book/chapters/04_api_endpoint_conversion/: README.md
book/async-book/chapters/05_authentication_and_authorization/: README.md
book/async-book/chapters/06_background_tasks_and_job_processing/: README.md
book/async-book/chapters/07_testing_and_quality_assurance/: README.md
book/async-book/chapters/08_performance_optimization/: README.md
book/async-book/chapters/09_security_and_compliance/: README.md
book/async-book/chapters/10_production_deployment_and_operations/: README.md
book/async-book/docs/contributing/: contribution_guide.md
book/async-book/docs/development/: setup.md
book/async-book/docs/publishing/: publishing_guide.md
book/async-book/src/async_patterns/: async_basics.py
book/async-book/src/fastapi_examples/: basic_app.py
book/async-book/src/flask_examples/: basic_app.py
book/async-book/src/migration_tools/: migration_helper.py
book/async-book/src/utils/: __init__.py  async_helpers.py  demo_basic.ipynb  demo_basic.py  runner.py  test_async.ipynb
book/async-book/templates/chapters/: chapter_template.md
book/async-book/templates/code/: code_example_template.py
(+76 files in other folders)
